# emoimage2text

./: .gitignore  CMakeLists.txt  README.md
demo/: EmoToText.sln
demo/EmoDatabaseService/: Dockerfile  EmoDatabaseService.csproj  EmoImage.cs  Program.cs
demo/EmoDatabaseService/Controllers/: EmoImageController.cs
demo/EmoDatabaseService/Data/: EmoDatabaseContext.cs
demo/EmoDatabaseService/Properties/: launchSettings.json
demo/EmoToTextWindow/: EmoRetrievalWindow.cpp  EmoRetrievalWindow.h  EmoToText.cpp  EmoToText.h  EmoToText.qrc  EmoToTextWindow.vcxproj  EmoToTextWindow.vcxproj.filters  main.cpp
demo/EmoToTextWindow/g2/algorithm/: g2.utils.convert.string.h
emo_to_text_lib/: CMakeLists.txt  main.cpp
ui/: CMakeLists.txt  main.cpp
ui/form/: EmoRetrievalWindow.cpp  EmoRetrievalWindow.h  EmoRetrievalWindow.ui  EmoToText.cpp  EmoToText.ui
